--- a/.editorconfig
+++ b/.editorconfig
@@ -1,9 +1,15 @@
+root = true
+
+# official properties
 [*]
 charset = utf-8
 end_of_line = lf
 indent_size = 2
 indent_style = space
 insert_final_newline = true
-max_line_length = 80
 tab_width = 2
 trim_trailing_whitespace = true
+
+# unofficial properties
+[*]
+max_line_length = 120
