--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "code-style",
   "version": "0.0.1",
-  "description": "Personal coding style configurations",
-  "main": "tsconfig.json",
+  "description": "Personal coding style configurations for editors/programming languages",
+  "main": "sass/.sass-lint.yml",
   "scripts": {},
   "repository": {
     "type": "git",
@@ -15,15 +15,20 @@
     "linting",
     "tsconfig",
     "tslint",
-    "sass-lint"
+    "sass-lint",
+    "sass",
+    "typescript",
+    "ts"
   ],
-  "author": "Phil Gibbins <scoobster17@hotmail.co.uk> (http://www.philgibbins.com)",
+  "author": "Phil Gibbins <scoobster17@hotmail.co.uk> (https://philgibbins.com)",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/scoobster17/code-style/issues"
   },
   "homepage": "https://github.com/scoobster17/code-style#readme",
   "dependencies": {
+    "sass-lint": "^1.13.1",
+    "tslint": "^5.20.1",
     "tslint-eslint-rules": "^5.4.0"
   }
 }
